--- a/app/src/main/res/layout/activity_termsandservice.xml
+++ b/app/src/main/res/layout/activity_termsandservice.xml
@@ -152,13 +152,13 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
-                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="@string/back10"
+                android:textAlignment="center"
                 android:textSize="16dp"
-                android:textStyle="italic"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:textStyle="italic" />
 
             <TextView
                 android:layout_gravity="center"
